# granite

./: .bzrignore  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  HACKING  INSTALL  Makefile.am  README  README.md  STANDARDS.md  autogen.sh  changelog  configure.ac  control  copyright  install.sh  libgranite-dev.install  libgranite0.install  meson.build  meson_options.txt  rules  tests.sh
blur-protocol/: meson.build  pantheon-blur-v1.xml  pantheon-blur.deps  pantheon-blur.vapi
data/: Base.css  CMakeLists.txt  Dark.css  granite.appdata.xml.in  granite.gresource.xml  granite.metainfo.xml.in  io.elementary.granite.gschema.xml  meson.build
data/style/: CompositedWindow.css  ModeButton.css  Switcher.css  WelcomeScreen.css
demo/: CMakeLists.txt  DemoPage.vala  GraniteDemo.vala  demo.desktop  io.elementary.granite-7.demo.desktop  io.elementary.granite.demo.desktop  io.elementary.granite.demo.json  main.vala  meson.build
demo/Views/: AccelLabelView.vala  AlertViewView.vala  ApplicationView.vala  AsyncImageView.vala  AvatarView.vala  BoxView.vala  CSSView.vala  ControlsView.vala  DateTimePickerView.vala  DialogsView.vala  DynamicNotebookView.vala  FormView.vala  HyperTextView.vala  HyperTextViewGrid.vala  ListsView.vala  MapsView.vala  MessageDialogView.vala  ModeButtonView.vala  OverlayBarView.vala  PaletteView.vala  SeekBarView.vala  SettingsUrisView.vala  SettingsUrlsView.vala  SettingsView.vala  SourceListView.vala  SplitWindowView.vala  StorageView.vala  StyleManagerView.vala  SwipeView.vala  TerminalOutputView.vala  ToastOverlayView.vala  ToastView.vala  UtilsView.vala  VideoView.vala  WelcomeView.vala  meson.build
demo/Views/SettingsView/: SettingsPage.vala  SettingsView.vala  SimpleSettingsPage.vala  meson.build
demo/data/: demo.gresource.xml  meson.build
doc/: CMakeLists.txt  meson.build
doc/css/: main.css
icons/: CMakeLists.txt  meson.build
icons/16x16/: CMakeLists.txt  meson.build
icons/22x22/: CMakeLists.txt  meson.build
icons/24x24/: CMakeLists.txt  meson.build
icons/32x32/: CMakeLists.txt  meson.build
icons/48x48/: CMakeLists.txt  meson.build
icons/scalable/: CMakeLists.txt  meson.build
lib/: Animation.vala  AppFactory.vala  Application.vala  BlurSurface.vala  CMakeLists.txt  Config.vala.in  Constants.vala  DateTime.vala  Factory.vala  Granite-0.1.gir  Init.vala  Main.vala  Makefile.am  SaveWindowStateMixin.vala  StyleClass.vala  StyleManager.vala  SwipeTracker.vala  config.h.cmake  config.h.in  config.vapi  granite-9.deps  granite.deps  granite.pc.cmake  granite.pc.in  meson.build  style-classes.vala
lib/Drawing/: BufferSurface.vala  Color.vala  Palette.vala  Utilities.vala  meson.build
lib/GtkPatch/: AboutDialog.vala  gtkpatch-utils.c  gtkpatch-utils.h  gtkpatch-utils.vapi  meson.build
lib/Icons/: icons.gresource.xml  meson.build
lib/Services/: Application.vala  AsyncMutex.vala  Contractor.vala  ContractorProxy.vala  ISaveWindowStateMixin.vala  IconFactory.vala  Logger.vala  Paths.vala  Portal.vala  Preferences.vala  Settings.vala  SimpleCommand.vala  System.vala  meson.build
lib/Styles/: CONTRIBUTING.md  Dialog.scss  Granite-dark.scss  Granite.scss  Gtk-dark.scss  Gtk.scss  Index-dark.scss  Index.scss  OverlayBar.scss  Placeholder.scss  STANDARDS.md  Toast.scss  _animate.scss  _button.scss  _common.scss  _exported.scss  _label.scss  _osd.scss  _palette.scss  _typography.scss  empty.css  meson.build  styles.gresource.xml
lib/Styles/Adw/: Avatar.scss  Banner.scss  Index.scss  WindowControls.scss
lib/Styles/Common/: Index.scss  Mixins.scss  Variables.scss  _animate.scss  _borders.scss  _common.scss  _controls.scss  _lighting.scss  _overundershoot.scss  _palette.scss  _utilities.scss
lib/Styles/Granite/: ActionSheet.scss  AlertDialog.scss  Box.scss  Button.scss  Dialog.scss  Header.scss  Index.scss  List.scss  ListItem.scss  MessageDialog.scss  OverlayBar.scss  Placeholder.scss  Sidebar.scss  TerminalView.scss  ToolBox.scss  ToolbarView.scss  _card.scss  _cards.scss  _classes.scss  _placeholders.scss  _sidebar.scss
lib/Styles/Gtk/: Arrow.scss  Button.scss  CheckButton.scss  CheckRadio.scss  Entry.scss  Expander.scss  GridView.scss  HeaderBar.scss  Index.scss  List.scss  ListBox.scss  ListView.scss  Paned.scss  Popover.scss  ProgressBar.scss  Scale.scss  Scrollbar.scss  ScrolledWindow.scss  Selection.scss  Separator.scss  ShortcutsWindow.scss  Sidebar.scss  Slider.scss  Spinner.scss  Switch.scss  Video.scss  Window.scss  WindowControls.scss  _classes.scss  _headerbars.scss  _images.scss  _shortcuts.scss  _tooltips.scss  _windows.scss
lib/Styles/Shumate/: Index.scss  MapMarker.scss
lib/Widgets/: AboutDialog.vala  AbstractSettingsPage.vala  AbstractSimpleSettingsPage.vala  AccelLabel.vala  AccelMenuLabel.vala  ActionSheet.vala  AlertDialog.vala  AlertView.vala  AppMenu.vala  Application.vala  AsyncImage.vala  AsyncNetworkImage.vala  Avatar.vala  BackButton.vala  Bin.vala  Box.vala  CellRendererBadge.vala  CellRendererExpander.vala  CellRendererNumerable.vala  CollapsablePaned.vala  CollapsiblePaned.vala  CompositedWindow.vala  ContractorMenu.vala  ContractorView.vala  DatePicker.vala  DecoratedWindow.vala  Dialog.vala  DynamicNotebook.vala  Entries.vala  FlowBox.vala  HeaderLabel.vala  HyperTextView.vala  LightWindow.vala  ListItem.vala  MessageDialog.vala  ModeButton.vala  ModeSwitch.vala  NotifyToast.vala  NotifyToastOverlay.vala  OldAvatar.vala  (+31 more)
lib/Widgets/Sidebar/: IndicatorBar.vala  (+9 more)
po/: CMakeLists.txt  LINGUAS  POTFILES  POTFILES.in  POTFILES.skip  aa.po  ace.po  af.po  ak.po  am.po  ar.po  az.po  ba.po  be.po  bg.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_ZA.po  eo.po  es.po  et.po  eu.po  fa.po  ff.po  fi.po  fil.po  fj.po  (+107 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+171 more)
(+60 files in other folders)
