subdir('16x16')
subdir('22x22')
subdir('24x24')
subdir('32x32')
subdir('48x48')
subdir('scalable')
iconsdir = join_paths (get_option('datadir'), 'icons', 'hicolor', '16x16', 'actions')
install_data([
	openmenu16,
	appointment16,
	openmenu22,
	openmenu24,
	openmenu32,
	openmenu48,
	openmenuescalable], install_dir : iconsdir)
